--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ons-page>
         <ons-toolbar>
             <div class="left">
-                <ons-icon icon="md-home" size="30px"></ons-icon>
+                <ons-icon size="30px" icon="md-home" ></ons-icon>
             </div>
             <div class="right">
                 <ons-icon size="30px" icon="md-face"></ons-icon>
@@ -35,17 +35,20 @@
 
     <template id="tab1.html">
         <ons-page id="Tab1">
-            <p style="text-align: center;">
-                This is the first page.
-            </p>
+                <ons-page>
+                        <p style="text-align: center; margin-top: 10px;">
+                          <ons-search-input
+                            placeholder="Search"
+                            onchange="ons.notification.alert('Searched for: ' + this.value)"
+                          ></ons-search-input>
+                        </p>
+                      </ons-page>
         </ons-page>
     </template>
 
     <template id="tab2.html">
         <ons-page id="Tab2">
-            <p style="text-align: center;">
-                This is the second page.
-            </p>
+          
         </ons-page>
     </template>
 </body>
