--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     <ons-search-input placeholder="Search" onchange="ons.notification.alert('Searched for: ' + this.value)"></ons-search-input>
                 </p>
                 <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel">
-                    <ons-carousel-item style="background-color: #e9dfd7;">
+                        <ons-carousel style="background: url(img/1.jpg)no-repeat center;background-size: contain;"></ons-carouselstyle></ons-carousel>  
+                    <ons-carousel-item style="background-color: #e9ebe2;">
+
                         <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
 
                         </div>
@@ -50,7 +52,7 @@
 
                         </div>
                     </ons-carousel-item>
-                    <ons-carousel-item style="background-color: rgb(102, 184, 209);">
+                    <ons-carousel-item style="background-color: rgb(152, 202, 218);">
                         <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
 
                         </div>
