--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p style="text-align: center; margin-top: 10px;">
                     <ons-search-input placeholder="Search" onchange="ons.notification.alert('Searched for: ' + this.value)"></ons-search-input>
                 </p>
-                <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel">
+                <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel" style="height: 300px;">
                         <ons-carousel style="background: url(img/1.jpg)no-repeat center;background-size: contain;"></ons-carouselstyle></ons-carousel>  
                     <ons-carousel-item style="background-color: #e9ebe2;">
 
