--- a/index.html
+++ b/index.html
@@ -39,28 +39,15 @@
                 <p style="text-align: center; margin-top: 10px;">
                     <ons-search-input placeholder="Search" onchange="ons.notification.alert('Searched for: ' + this.value)"></ons-search-input>
                 </p>
-                <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel" style="height: 300px;">
-                        <ons-carousel style="background: url(img/1.jpg)no-repeat center;background-size: contain;"></ons-carouselstyle></ons-carousel>  
-                    <ons-carousel-item style="background-color: #e9ebe2;">
-
-                        <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
-
-                        </div>
+                <ons-carousel swipeable auto-scroll overscrollable id="carousel" style="height: 300px;">
+                    <ons-carousel-item style="background: url(img/1.jpg)no-repeat center;background-size: contain;">
                     </ons-carousel-item>
-                    <ons-carousel-item style="background-color: rgb(178, 184, 197);">
-                        <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
-
-                        </div>
+                    <ons-carousel-item style="background: url(img/item1.jpg)no-repeat center;background-size: contain;">
                     </ons-carousel-item>
-                    <ons-carousel-item style="background-color: rgb(152, 202, 218);">
-                        <div style="text-align: center; font-size: 30px; margin-top: 20px; color: #fff;">
-
-                        </div>
+                    <ons-carousel-item style="background: url(img/item3.jpg)no-repeat center;background-size: contain;">
                     </ons-carousel-item>
                 </ons-carousel>
             </ons-page>
-
-
         </ons-page>
     </template>
 
