--- a/index.html
+++ b/index.html
@@ -42,20 +42,118 @@
                 <ons-carousel swipeable auto-scroll overscrollable id="carousel" style="height: 300px;">
                     <ons-carousel-item style="background: url(img/1.jpg)no-repeat center;background-size: contain;">
                     </ons-carousel-item>
-                    <ons-carousel-item style="background: url(img/item1.jpg)no-repeat center;background-size: contain;">
+                    <ons-carousel-item style="background: url(img/2.jpg)no-repeat center;background-size: contain;">
                     </ons-carousel-item>
-                    <ons-carousel-item style="background: url(img/item3.jpg)no-repeat center;background-size: contain;">
+                    <ons-carousel-item style="background: url(img/3.jpg)no-repeat center;background-size: contain;">
                     </ons-carousel-item>
                 </ons-carousel>
+                <ons-row class="category">
+                        <ons-col modifier="nodivider" id="Category_1" onclick="openPlaylist(this.id)">
+                          <div class="category_wrapper">
+                            <figure class="category_thumbnail">
+                              <ons-icon icon="fa-users"></ons-icon>
+                              <div class="category_title" id="Category_1_name">Party</div>
+                            </figure>
+                          </div>
+                        </ons-col>
+                        <ons-col modifier="nodivider" id="Category_2" onclick="openPlaylist(this.id)">
+                          <div class="category_wrapper">
+                            <figure class="category_thumbnail">
+                              <ons-icon icon="fa-headphones"></ons-icon>
+                              <div class="category_title" id="Category_2_name">Relax</div>
+                            </figure>
+                          </div>
+                        </ons-col>
+                      </ons-row>
+                      <ons-row class="category">  
+                        <ons-col modifier="nodivider" id="Category_3" onclick="openPlaylist(this.id)">
+                          <div class="category_wrapper">
+                            <figure class="category_thumbnail">
+                              <ons-icon icon="ion-music-note"></ons-icon>
+                              <div class="category_title" id="Category_3_name">Classical</div>
+                            </figure>
+                          </div>
+                        </ons-col>
+                        <ons-col modifier="nodivider" id="Category_4" onclick="openPlaylist(this.id)">
+                          <div class="category_wrapper">
+                            <figure class="category_thumbnail">
+                              <ons-icon icon="ion-android-microphone"></ons-icon>
+                              <div class="category_title" id="Category_4_name">Pop</div>
+                            </figure>
+                          </div>
+                        </ons-col>
+                      </ons-row>
+                      <ons-row class="category">    
+                        <ons-col modifier="nodivider" id="Category_5" onclick="openPlaylist(this.id)">
+                          <div class="category_wrapper">
+                            <figure class="category_thumbnail">
+                              <ons-icon icon="fa-smile-o"></ons-icon>
+                              <div class="category_title" id="Category_5_name">Happy</div>
+                            </figure>
+                          </div>
+                        </ons-col>
+                        <ons-col modifier="nodivider" id="Category_6" onclick="openPlaylist(this.id)">
+                          <div class="category_wrapper">
+                            <figure class="category_thumbnail">
+                              <ons-icon icon="fa-bed"></ons-icon>
+                              <div class="category_title" id="Category_6_name">Sleepy</div>
+                            </figure>
+                          </div>
+                        </ons-col>
+                      </ons-row>
             </ons-page>
         </ons-page>
     </template>
+    
 
     <template id="tab2.html">
-        <ons-page id="Tab2">
-
-        </ons-page>
-    </template>
+            <ons-page id="Tab2">
+                <center><ons-list-header> Cart</ons-list-header></center>
+                <ons-list-item>
+                    <div class="left">
+                        <img class="list-item__thumbnail" src="https://placekitten.com/g/40/40">
+                    </div>
+                    <div class="center">
+                        <span class="list-item__title">app</span>
+                        <span class="list-item__subtitle">$5000</span>
+                    </div>
+                    <div class="right">
+                            <ons-toolbar-button>
+                                <ons-icon icon="md-trash-alt"></ons-icon>
+                            </ons-toolbar-button>
+                        </div>
+                </ons-list-item>
+                <ons-list-item>
+                    <div class="left">
+                        <img class="list-item__thumbnail" src="https://placekitten.com/g/40/40">
+                    </div>
+                    <div class="center">
+                        <span class="list-item__title">Cutest kitty</span>
+                        <span class="list-item__subtitle">$8000</span>
+                    </div>
+                    <div class="right">
+                            <ons-toolbar-button>
+                                <ons-icon icon="md-trash-alt"></ons-icon>
+                            </ons-toolbar-button>
+                        </div>
+                </ons-list-item>
+                <ons-list-item>
+                    <div class="left">
+                        <img class="list-item__thumbnail" src="https://placekitten.com/g/40/40">
+                    </div>
+                    <div class="center">
+                        <span class="list-item__title">Robin</span>
+                        <span class="list-item__subtitle">$10000</span>
+                        
+                    </div>
+                    <div class="right">
+                            <ons-toolbar-button>
+                                <ons-icon icon="fa-trash-alt"></ons-icon>
+                            </ons-toolbar-button>
+                        </div>
+                </ons-list-item>
+            </ons-page>
+        </template>
 </body>
 
 </html>
