--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                     </ons-toolbar-button>
                 </div>
             </ons-list-item>
+            <ons-button modifier="large">PROCEED TO PAY</ons-button>
         </ons-page>
     </template>
     <script>document.addEventListener('prechange', function(event) {
