--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
                               <ons-icon icon="fa-users"></ons-icon>
-                              <div class="category_title" id="Category_1_name">Party</div>
+                              <div class="category_title" id="Category_1_name">Beauty</div>
                             </figure>
                           </div>
                         </ons-col>
@@ -61,7 +61,7 @@
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
                               <ons-icon icon="fa-headphones"></ons-icon>
-                              <div class="category_title" id="Category_2_name">Relax</div>
+                              <div class="category_title" id="Category_2_name">Sports</div>
                             </figure>
                           </div>
                         </ons-col>
@@ -69,7 +69,7 @@
                                 <div class="category_wrapper">
                                   <figure class="category_thumbnail">
                                     <ons-icon icon="fa-users"></ons-icon>
-                                    <div class="category_title" id="Category_1_name">Party</div>
+                                    <div class="category_title" id="Category_1_name">Computer</div>
                                   </figure>
                                 </div>
                               </ons-col>
@@ -79,7 +79,7 @@
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
                               <ons-icon icon="ion-music-note"></ons-icon>
-                              <div class="category_title" id="Category_3_name">Classical</div>
+                              <div class="category_title" id="Category_3_name">Camera</div>
                             </figure>
                           </div>
                         </ons-col>
@@ -87,7 +87,7 @@
                                 <div class="category_wrapper">
                                   <figure class="category_thumbnail">
                                     <ons-icon icon="ion-music-note"></ons-icon>
-                                    <div class="category_title" id="Category_3_name">Classical</div>
+                                    <div class="category_title" id="Category_3_name">Furnture</div>
                                   </figure>
                                 </div>
                               </ons-col>
@@ -95,7 +95,7 @@
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
                               <ons-icon icon="ion-android-microphone"></ons-icon>
-                              <div class="category_title" id="Category_4_name">Pop</div>
+                              <div class="category_title" id="Category_4_name">Smartphone</div>
                             </figure>
                           </div>
                         </ons-col>
@@ -105,7 +105,7 @@
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
                               <ons-icon icon="fa-smile-o"></ons-icon>
-                              <div class="category_title" id="Category_5_name">Happy</div>
+                              <div class="category_title" id="Category_5_name">Toy</div>
                             </figure>
                           </div>
                         </ons-col>
@@ -113,7 +113,7 @@
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
                               <ons-icon icon="fa-bed"></ons-icon>
-                              <div class="category_title" id="Category_6_name">Sleepy</div>
+                              <div class="category_title" id="Category_6_name">Hradware</div>
                             </figure>
                           </div>
                         </ons-col>
@@ -121,7 +121,7 @@
                                 <div class="category_wrapper">
                                   <figure class="category_thumbnail">
                                     <ons-icon icon="fa-smile-o"></ons-icon>
-                                    <div class="category_title" id="Category_5_name">Happy</div>
+                                    <div class="category_title" id="Category_5_name">Appliance</div>
                                   </figure>
                                 </div>
                               </ons-col>
