--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <ons-col modifier="nodivider" id="Category_1" onclick="openPlaylist(this.id)">
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
-                              <ons-icon icon="fa-users"></ons-icon>
+                              <ons-icon icon="md-face"></ons-icon>
                               <div class="category_title" id="Category_1_name">Beauty</div>
                             </figure>
                           </div>
@@ -218,11 +218,11 @@
             </center>
             <ons-list-item>
                 <div class="left">
-                    <img class="list-item__thumbnail" src="https://placekitten.com/g/40/40">
+                    <img class="list-item__thumbnail" src="img/item1.jpg">
                 </div>
                 <div class="center">
-                    <span class="list-item__title">app</span>
-                    <span class="list-item__subtitle">$5000</span>
+                    <span class="list-item__title">Watch</span>
+                    <span class="list-item__subtitle">5000.-</span>
                 </div>
                 <div class="right">
                     <ons-toolbar-button>
@@ -232,11 +232,11 @@
             </ons-list-item>
             <ons-list-item>
                 <div class="left">
-                    <img class="list-item__thumbnail" src="https://placekitten.com/g/40/40">
+                    <img class="list-item__thumbnail" src="img/item2.jpg">
                 </div>
                 <div class="center">
-                    <span class="list-item__title">Cutest kitty</span>
-                    <span class="list-item__subtitle">$8000</span>
+                    <span class="list-item__title">Loudspeaker</span>
+                    <span class="list-item__subtitle">8000 .-</span>
                 </div>
                 <div class="right">
                     <ons-toolbar-button>
@@ -246,11 +246,11 @@
             </ons-list-item>
             <ons-list-item>
                 <div class="left">
-                    <img class="list-item__thumbnail" src="https://placekitten.com/g/40/40">
+                    <img class="list-item__thumbnail" src="img/item3.jpg">
                 </div>
                 <div class="center">
-                    <span class="list-item__title">Robin</span>
-                    <span class="list-item__subtitle">$10000</span>
+                    <span class="list-item__title">shoes </span>
+                    <span class="list-item__subtitle">10000.-</span>
 
                 </div>
                 <div class="right">
