--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ons-tabbar swipeable position="auto">
             <ons-tab page="tab1.html" label="Home" icon="ion-home, material:md-home" badge="7" active>
             </ons-tab>
-            <ons-tab page="tab2.html" label="Cart" icon="md-settings" active-icon="md-face">
+            <ons-tab page="tab2.html" label="Cart" icon="md-car" active-icon="md-face">
             </ons-tab>
         </ons-tabbar>
     </ons-page>
@@ -60,7 +60,7 @@
                         <ons-col modifier="nodivider" id="Category_2" onclick="openPlaylist(this.id)">
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
-                              <ons-icon icon="fa-headphones"></ons-icon>
+                              <ons-icon icon="md-car"></ons-icon>
                               <div class="category_title" id="Category_2_name">Sports</div>
                             </figure>
                           </div>
@@ -68,7 +68,7 @@
                         <ons-col modifier="nodivider" id="Category_1" onclick="openPlaylist(this.id)">
                                 <div class="category_wrapper">
                                   <figure class="category_thumbnail">
-                                    <ons-icon icon="fa-users"></ons-icon>
+                                    <ons-icon icon="md-print"></ons-icon>
                                     <div class="category_title" id="Category_1_name">Computer</div>
                                   </figure>
                                 </div>
@@ -78,7 +78,7 @@
                         <ons-col modifier="nodivider" id="Category_3" onclick="openPlaylist(this.id)">
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
-                              <ons-icon icon="ion-music-note"></ons-icon>
+                              <ons-icon icon="md-camera"></ons-icon>
                               <div class="category_title" id="Category_3_name">Camera</div>
                             </figure>
                           </div>
@@ -86,7 +86,7 @@
                         <ons-col modifier="nodivider" id="Category_3" onclick="openPlaylist(this.id)">
                                 <div class="category_wrapper">
                                   <figure class="category_thumbnail">
-                                    <ons-icon icon="ion-music-note"></ons-icon>
+                                    <ons-icon icon="fa-bed"></ons-icon>
                                     <div class="category_title" id="Category_3_name">Furnture</div>
                                   </figure>
                                 </div>
@@ -94,7 +94,7 @@
                         <ons-col modifier="nodivider" id="Category_4" onclick="openPlaylist(this.id)">
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
-                              <ons-icon icon="ion-android-microphone"></ons-icon>
+                              <ons-icon icon="md-smartphone"></ons-icon>
                               <div class="category_title" id="Category_4_name">Smartphone</div>
                             </figure>
                           </div>
@@ -104,7 +104,7 @@
                         <ons-col modifier="nodivider" id="Category_5" onclick="openPlaylist(this.id)">
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
-                              <ons-icon icon="fa-smile-o"></ons-icon>
+                              <ons-icon icon="md-bug"></ons-icon>
                               <div class="category_title" id="Category_5_name">Toy</div>
                             </figure>
                           </div>
@@ -112,7 +112,7 @@
                         <ons-col modifier="nodivider" id="Category_6" onclick="openPlaylist(this.id)">
                           <div class="category_wrapper">
                             <figure class="category_thumbnail">
-                              <ons-icon icon="fa-bed"></ons-icon>
+                              <ons-icon icon="fa-desktop"></ons-icon>
                               <div class="category_title" id="Category_6_name">Hradware</div>
                             </figure>
                           </div>
@@ -120,7 +120,7 @@
                         <ons-col modifier="nodivider" id="Category_5" onclick="openPlaylist(this.id)">
                                 <div class="category_wrapper">
                                   <figure class="category_thumbnail">
-                                    <ons-icon icon="fa-smile-o"></ons-icon>
+                                    <ons-icon icon="md-boat"></ons-icon>
                                     <div class="category_title" id="Category_5_name">Appliance</div>
                                   </figure>
                                 </div>
